--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,27 @@
+isdnutils (1:3.9.20060704+dfsg.2-12) unstable; urgency=low
+
+  * debian/libcapi20-3.links: link *.so to *.so.0.0.0 (Closes: #650156)
+    Many thanks to Michael Müller for his work on the issue.
+  * rely more on debhelper instead of fragile scripting
+    - let dh7 take care of some of the stuff in debian/finish-install*.sh
+    - replace dh_movefiles with dh_install
+    - use specialized debhelper tools for docs, man pages and examples
+    - rely on dh_lintian for the overrides
+  * debian/patches/ALL_*.patch: strip unnecessary linking from builds
+  * debian/rules:
+    - empty dependency_libs field in .la files
+    - use dh_prep instead of dh_clean -k
+    - use $CURDIR instead of $pwd
+  * debian/libcapi20-3.README: add information how to recompile for debugging
+  * debian/*.lintian-overrides: fix some syntactical errors
+  * drop transitional binary metapackage isdnutils
+  * debian/*.dirs:
+    - fix isdnutils-doc touching usr/share/doc/isdnutils
+    - drop erroneous /usr/man/man1 directory from isdnutils-xtools.dirs
+  * drop debian/*.conffiles (unnecessary since compat level 3 already)
+
+ -- Rolf Leggewie <foss@rolf.leggewie.biz>  Tue, 29 Nov 2011 14:20:45 +0800
+
 isdnutils (1:3.9.20060704+dfsg.2-11) unstable; urgency=low
 
   [ Jeroen Schot ]
