--- a/debian/po/eu.po
+++ b/debian/po/eu.po
@@ -3,20 +3,20 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Piarres Beobide <pi@beobide.net>, 2008.
-# Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>, 2009.
+# Iñaki Larrañaga Murgoitio <dooteo@zundan.com>, 2009, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: isdnutils_1:3-9.20060704-5_eu\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
 "POT-Creation-Date: 2012-08-31 13:10-0400\n"
-"PO-Revision-Date: 2009-10-15 12:16+0200\n"
-"Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>\n"
+"PO-Revision-Date: 2012-09-01 10:37+0200\n"
+"Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@zundan.com>\n"
 "Language-Team: Basque <debian-l10n-basque@lists.debian.org>\n"
 "Language: eu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. Type: error
@@ -404,10 +404,9 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../isdnlog.templates:3001
-#, fuzzy
 #| msgid "Country ITU code:"
 msgid "Country's ISO two-letter code:"
-msgstr "Herrialdearen ITU kodea:"
+msgstr "Herrialdearen bi hizkiko ISO kodea:"
 
 #. Type: string
 #. Description
@@ -416,6 +415,9 @@ msgid ""
 "Please enter the ISO code of the local country. As no rate tables are "
 "available, this setting will be unused."
 msgstr ""
+"Sartu herrialde lokalaren ISO kodea. Prezioaren taularik ez dagoenez "
+"erabilgarri, "
+"ezarpen hau ez da erabiliko."
 
 #. Type: string
 #. Description
