--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -1,5 +1,6 @@
 # Vietnamese Translation for isdnutils.
 # Copyright © 2009 Free Software Foundation, Inc.
+# Nguyen Vu Hung <vuhung16plus@gmail.com>, 2012
 # Clytie Siddall <clytie@riverland.net.au>, 2005-2009.
 #
 msgid ""
@@ -7,9 +8,10 @@ msgstr ""
 "Project-Id-Version: isdnutils 1:3.9.20060704-5\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
 "POT-Creation-Date: 2012-08-31 13:10-0400\n"
-"PO-Revision-Date: 2009-10-14 19:48+0930\n"
-"Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
-"Language-Team: Vietnamese <vi-VN@googlegroups.com>, Vietnamese <debian-l10n-vietnamese@lists.debian.org>\n"
+"PO-Revision-Date: 2012-09-01 09:28+0700\n"
+"Last-Translator: Nguyen Vu Hung <vuhung16plus@gmail.com>\n"
+"Language-Team: Du an MOST <du-an-most@lists.hanoilug.org>, Vietnamese "
+"<debian-l10n-vietnamese@lists.debian.org>\n"
 "Language: vi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -392,10 +394,8 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../isdnlog.templates:3001
-#, fuzzy
-#| msgid "Country ITU code:"
 msgid "Country's ISO two-letter code:"
-msgstr "Mã ITU quốc gia:"
+msgstr "Mã ISO quốc gia hai chữ số:"
 
 #. Type: string
 #. Description
@@ -404,12 +404,14 @@ msgid ""
 "Please enter the ISO code of the local country. As no rate tables are "
 "available, this setting will be unused."
 msgstr ""
+"Hãy nhập mã ISO quốc gia. Thiết lập này không được dùng vì không có bảng "
+"rate."
 
 #. Type: string
 #. Description
 #: ../isdnlog.templates:4001
 msgid "Prefix to dial before international number:"
-msgstr "Tiền tố quốc tế:"
+msgstr "Tiền tố điện thoại quốc tế:"
 
 #. Type: string
 #. Description
@@ -421,7 +423,7 @@ msgstr "Mã ITU quốc gia:"
 #. Description
 #: ../isdnlog.templates:5001
 msgid "Please enter the international code for the local country."
-msgstr "Hãy gõ mã quốc tế của chỗ bạn."
+msgstr "Hãy nhập mã quốc tế của quốc gia địa phương."
 
 #. Type: string
 #. Description
@@ -446,7 +448,7 @@ msgstr "Mã vùng địa phương (nếu có):"
 #. Description
 #: ../isdnlog.templates:8001
 msgid "Run isdnrate as a daemon?"
-msgstr "Bạn có muốn chạy trình isdnrate (giá isdn) như là trình nền không?"
+msgstr "Bạn có muốn chạy trình isdnrate như là trình nền không?"
 
 #. Type: boolean
 #. Description
@@ -485,7 +487,7 @@ msgid ""
 "often be dropped."
 msgstr ""
 "Vbox cần biết nên lắng nghe số nào. Phụ thuộc vào hệ thống ISDN của quốc gia "
-"ở, số này chứa mã vùng hay không. Cũng nên bỏ số « 0 » đi trước."
+"ở, số này chứa mã vùng hay không. Cũng nên bỏ số \"0\" ở phía trước."
 
 #. Type: string
 #. Description
