--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -1,22 +1,22 @@
 # translation of ru.po to Russian
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the isdnutils package.
 #
-# Yuri Kozlov <kozlov.y@gmail.com>, 2008.
-# Yuri Kozlov <yuray@komyakino.ru>, 2009.
+# Yuri Kozlov <yuray@komyakino.ru>, 2008.
+# Yuri Kozlov <yuray@komyakino.ru>, 2009, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: isdnutils 1:3.9.20060704-5\n"
+"Project-Id-Version: isdnutils 1:3.25+dfsg1-3\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
 "POT-Creation-Date: 2012-08-31 13:10-0400\n"
-"PO-Revision-Date: 2009-10-26 15:10+0300\n"
+"PO-Revision-Date: 2012-09-02 08:47+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.4\n"
 "Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
@@ -48,10 +48,10 @@ msgid ""
 "start\"."
 msgstr ""
 "Если они раньше не работали, и вы хотите попытаться их настроить "
-"автоматически, то остановите все процессы ISDN (запустите \"/etc/init.d/"
-"isdnutils stop\"), удалите файлы, перечисленные ранее, и перезапустите "
-"настройку командой \"dpkg-reconfigure ipppd\". После этого, перезапустите "
-"процессы ISDN с помощью \"/etc/init.d/isdnutils start\"."
+"автоматически, то остановите все процессы ISDN (запустите «/etc/init.d/"
+"isdnutils stop»), удалите файлы, перечисленные ранее, и перезапустите "
+"настройку командой «dpkg-reconfigure ipppd». После этого, перезапустите "
+"процессы ISDN с помощью «/etc/init.d/isdnutils start»."
 
 #. Type: string
 #. Description
@@ -94,7 +94,7 @@ msgid ""
 "Valid interface names begin with \"ippp\" followed by a number between 0 and "
 "63."
 msgstr ""
-"Допускаются имена интерфейсов, которые начинаются с \"ippp\", за которым "
+"Допускаются имена интерфейсов, которые начинаются с «ippp», за которым "
 "следует число от 0 до 63."
 
 #. Type: string
@@ -120,7 +120,7 @@ msgid ""
 "Please enter that telephone number here, including dialing prefixes, area "
 "codes, and so on, but without any spaces."
 msgstr ""
-"Введите здесь номер телефона, включая префиксы набора, код региона и т.д, но "
+"Введите здесь номер телефона, включая префиксы набора, код региона и т. д, но "
 "без пробелов."
 
 #. Type: string
@@ -398,10 +398,9 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../isdnlog.templates:3001
-#, fuzzy
 #| msgid "Country ITU code:"
 msgid "Country's ISO two-letter code:"
-msgstr "ITU-код страны:"
+msgstr "Страна (двухбуквенный код ISO):"
 
 #. Type: string
 #. Description
@@ -410,6 +409,8 @@ msgid ""
 "Please enter the ISO code of the local country. As no rate tables are "
 "available, this setting will be unused."
 msgstr ""
+"Введите код ISO страны, где вы находитесь. Так как таблица тарифов "
+"отсутствует, эта настройка использоваться не будет."
 
 #. Type: string
 #. Description
@@ -494,7 +495,7 @@ msgid ""
 msgstr ""
 "Для Vbox нужно указать, какой номер должен прослушиваться. В зависимости от "
 "ISDN системы, используемой в стране, он может включать код региона. Обычно, "
-"он вводится без начального \"0\"."
+"он вводится без начального «0»."
 
 #. Type: string
 #. Description
@@ -522,7 +523,7 @@ msgid ""
 "incoming telephone number, for instance to aggressively filter some incoming "
 "numbers."
 msgstr ""
-"Один звонок -- это около 5 секунд. Позже это значение можно подстроить для "
+"Один звонок — это около 5 секунд. Позже это значение можно подстроить для "
 "определённых номеров вручную, например для принудительной фильтрации "
 "некоторых входящих номеров."
 
@@ -634,8 +635,8 @@ msgid ""
 "The home directory \"${DIR}\" for user \"${USER}\" does not exist. This "
 "means that the file \"${DIR}/.vbox.conf\" cannot be created."
 msgstr ""
-"Домашний каталог \"${DIR}\" для пользователя \"${USER}\" не существует. Это "
-"означает, что файл \"${DIR}/.vbox.conf\" не может быть создан."
+"Домашний каталог «${DIR}» для пользователя «${USER}» не существует. Это "
+"означает, что файл «${DIR}/.vbox.conf» не может быть создан."
 
 #. Type: error
 #. Description
@@ -651,7 +652,7 @@ msgid ""
 "configuration with \"dpkg-reconfigure isdnvboxserver\" to enter another "
 "username, or after creating the user."
 msgstr ""
-"Учётная запись \"${USER}\" не существует в системе. Перезапустите процесс "
+"Учётная запись «${USER}» не существует в системе. Перезапустите процесс "
 "настройки с помощью \"dpkg-reconfigure isdnvboxserver\", чтобы указать "
 "другое имя пользователя или после создания пользователя."
 
