--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -1,14 +1,13 @@
 # Italian (it) translation of isdnutils po-debconf
-# Copyright (C) 2009 THE isdnutils'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the isdnutils package.
-# Luca Monducci <luca.mo@tiscali.it>, 2004-2009.
+# Luca Monducci <luca.mo@tiscali.it>, 2004-2012.
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: isdnutils 1:3.9.20060704-2.5 italian debconf templates\n"
+"Project-Id-Version: isdnutils 1:3.25+dfsg1-3: italian debconf templates\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
 "POT-Creation-Date: 2012-08-31 13:10-0400\n"
-"PO-Revision-Date: 2009-10-18 17:34+0200\n"
+"PO-Revision-Date: 2012-09-01 18:24+0200\n"
 "Last-Translator: Luca Monducci <luca.mo@tiscali.it>\n"
 "Language-Team: Italian <debian-l10n-italian@lists.debian.org>\n"
 "Language: it\n"
@@ -397,10 +396,8 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../isdnlog.templates:3001
-#, fuzzy
-#| msgid "Country ITU code:"
 msgid "Country's ISO two-letter code:"
-msgstr "Codice ITU del paese:"
+msgstr "Codice ISO di due lettere del paese:"
 
 #. Type: string
 #. Description
@@ -409,6 +406,8 @@ msgid ""
 "Please enter the ISO code of the local country. As no rate tables are "
 "available, this setting will be unused."
 msgstr ""
+"Inserire il codice ISO del paese in cui ci si trova. Questa impostazione non "
+"verrà usata se le tabelle delle tariffe da non sono disponibili."
 
 #. Type: string
 #. Description
