--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -1,14 +1,14 @@
 # Portuguese translation for isdnutils debconf messages.
-# Copyright (C) 2007 Pedro Ribeiro <p.m42.ribeiro@gmail.com>
+# Copyright (C) 2007-2012 Pedro Ribeiro <p.m42.ribeiro@gmail.com>
 # This file is distributed under the same license as the isdnutils package.
-# Pedro Ribeiro <p.m42.ribeiro@gmail.com>, 2007
+# Pedro Ribeiro <p.m42.ribeiro@gmail.com>, 2007-2012
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: isdnutils_1:3.9.20060704-5\n"
+"Project-Id-Version: isdnutils_1:3.25+dfsg1-3\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
 "POT-Creation-Date: 2012-08-31 13:10-0400\n"
-"PO-Revision-Date: 2009-10-18 22:54+0100\n"
+"PO-Revision-Date: 2009-09-05 00:14+0100\n"
 "Last-Translator: Pedro Ribeiro <p.m42.ribeiro@gmail.com>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>, Portuguese <debian-l10n-portuguese@lists.debian.org>\n"
 "Language: pt\n"
@@ -397,10 +397,8 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../isdnlog.templates:3001
-#, fuzzy
-#| msgid "Country ITU code:"
 msgid "Country's ISO two-letter code:"
-msgstr "Código ITU do país:"
+msgstr "Código ISO de duas letras do país:"
 
 #. Type: string
 #. Description
@@ -409,6 +407,8 @@ msgid ""
 "Please enter the ISO code of the local country. As no rate tables are "
 "available, this setting will be unused."
 msgstr ""
+"Indique por favor o código ISO do país escolhido. Como não estão definidas "
+"tabelas de custos, esta definição não será usada."
 
 #. Type: string
 #. Description
@@ -544,7 +544,7 @@ msgid ""
 "When a message is recorded, an email notification is sent. If that email "
 "should contain the message as an attachment, choose the option."
 msgstr ""
-"Quando uma mensagem é gravada, um email de notificação é enviado. Se desejar "
+"Quando uma mensagem é gravada, é enviado um email de notificação. Se desejar "
 "que esse email tenha em anexo a mensagem, escolha a opção."
 
 #. Type: string
@@ -561,7 +561,7 @@ msgid ""
 "member of the \"dialout\" group."
 msgstr ""
 "O daemon vboxd deve ser executado com os privilégios de um utilizador normal "
-"(não-root). Este user tem que ser um membro do grupo \"dialout\"."
+"(não-root). Este utilizador tem que ser um membro do grupo \"dialout\"."
 
 #. Type: text
 #. Description
@@ -612,13 +612,13 @@ msgstr ""
 #. Translators, do not translate "${User}"
 #: ../isdnvboxserver.templates:8001
 msgid "Password for ${User}:"
-msgstr "Palavra-chave para o utilizador ${User}:"
+msgstr "Palavra-passe para o utilizador ${User}:"
 
 #. Type: password
 #. Description
 #: ../isdnvboxserver.templates:8001
 msgid "Please choose the password for the ${User} connection user."
-msgstr "Por favor, indique a palavra-chave para o utilizador ${User}."
+msgstr "Por favor, indique a palavra-passe para o utilizador ${User}."
 
 #. Type: error
 #. Description
